[project]
name = "privacy_checks"
version = "0.0.1"
authors = [
  { name="Mark deGroat", email="mark.degroat@rearc.io" },
]
description = "A Python library for privacy checks suite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies=[
    "pandas",
    "pycanon", 
    "dataprofiler[ml]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"